Translate interface controller to INO format, massively update

--- a/interface/platformio.ini
+++ b/interface/platformio.ini
@@ -8,14 +8,18 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:huzzah]
+[env:espressif8266]
 platform=espressif8266
 board=huzzah
 framework=arduino
 lib_deps =
-  PubSubClient
-  Encoder
   Adafruit NeoPixel
+  PubSubClient
+  WifiManager
+  ArduinoJson
+  Button
+; Custom Serial Monitor baud rate
+monitor_baud = 115200
 
 [platformio]
 src_dir=src
